Add routing for register user feature
