# server/src/routers/api/authRouter.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { registerUser } from "../../controllers/authController";
+
+const authRouter = Router();
+
+authRouter.post("/register", registerUser);
+
+export { authRouter };
